fix: space after "collapse icon" should be 32px and center (form review)

--- a/frontend/src/components/SeedlotRegistrationSteps/OwnershipStep/styles.scss
+++ b/frontend/src/components/SeedlotRegistrationSteps/OwnershipStep/styles.scss
@@ -7,6 +7,14 @@
   justify-content: space-between;
 }
 
+button.bcgov--accordion__heading{
+    align-items: center;
+  }
+
+svg.bcgov--accordion__arrow{
+  margin-right: 2rem;
+}
+
 .ownership-step-title-box {
   display: flex;
   flex-direction: column;
@@ -43,6 +51,8 @@
       color: var(--#{vars.$bcgov-prefix}-text-secondary);
     }
   }
+
+
 
   @media only screen and (min-width: 640px) {
     .#{vars.$bcgov-prefix}--accordion__content {
